# slimes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  imgui.ini  premake5.lua
.github/workflows/: Build-Example-Executable-Windows.yml  ci.yml  release.yml
Assets/Shaders/: blendEvap.comp  blendEvap.frag  blendEvapPaint.frag  draw.comp  painter.frag
Scripts/: GenerateProject.bat
Source/: Agent.h  ProjectApp.cpp  ProjectApp.h  SimulationManager.cpp  SimulationManager.h
Source/Layers/: BaseLayer.cpp  BaseLayer.h  ProjectLayer.cpp  ProjectLayer.h
assets/shaders/: painter.comp
scripts/: GenerateProject.bat
source/: agent.h  project_app.h  simulation_manager.cpp
source/layers/: base_layer.h  project_layer.cpp
src/: ProjectApp.cpp  SimulationManager.cpp  SimulationManager.h  project_app.cpp  simulation_manager.h
src/Layers/: BaseLayer.cpp  BaseLayer.h  ProjectLayer.cpp  ProjectLayer.h
src/layers/: base_layer.cpp  project_layer.h
